# beginner_tutorials

./: CMakeLists.txt  README.md  package.xml
launch/: launch_pub_sub.py  launch_ros_bag.py
results/: cppcheck  cpplint
results/rosbag2_2023_11_23-02_11_16/: metadata.yaml  rosbag2_2023_11_23-02_11_16_0.db3
src/: publisher.cpp  subscriber.cpp
srv/: ModString.srv
test/: talker_test.cpp
